--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@ layout: compress
     <!--<![endif]-->
     <head>
         {% include head.html %}
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         {% include nav.html %}
@@ -20,7 +21,9 @@ layout: compress
                 <div class="row">
                     <a href="{{ site.url }}">
                         <svg
-                            class="img-circle zoombtn animated rotateIn"
+                            widht=150
+                            height= 150
+                            class="img-circle zoombtn animated logo"
                             viewBox="0 0 1000 1000"
                             fill="none"
                             xmlns="http://www.w3.org/2000/svg"
