--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 //colors
-$bodycolor           : #D24D57;
+$bodycolor           : #6b56fc;
 $black           	 : #000;
 $white               : #fff;
 $color_gray          : #e8e8e8;
@@ -19,6 +19,7 @@ $color_alabaster     : #fcfcfc;
 $color_celeste       : #ccc;
 $color_pink_swan     : #bbb;
 $comp-color 	     : complement(#222); 
+$purple              : #7d6afe
 
 //button colors
 $success			 : #5cb85c;
