about me updated

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -19,7 +19,7 @@ $color_alabaster     : #fcfcfc;
 $color_celeste       : #ccc;
 $color_pink_swan     : #bbb;
 $comp-color 	     : complement(#222); 
-$purple              : #7d6afe
+$purple              : #7d6afe;
 
 //button colors
 $success			 : #5cb85c;
