Put my name and years old on the about me

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: compress
     <!--<![endif]-->
     <head>
         {% include head.html %}
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         {% include nav.html %}
@@ -21,8 +21,8 @@ layout: compress
                 <div class="row">
                     <a href="{{ site.url }}">
                         <svg
-                            widht=150
-                            height= 150
+                            widht="150"
+                            height="150"
                             class="img-circle zoombtn animated logo"
                             viewBox="0 0 1000 1000"
                             fill="none"
@@ -297,6 +297,8 @@ layout: compress
                         <a class="zoombtn" href="{{ site.url }}">
                             <p style="font-size: 1.2rem; font-weight: 300">
                                 {{ site.title }}
+                                <br>
+                                I'm Sahid Kick, and this is my Website
                             </p>
                         </a>
                     </h3>
